chore: ui/ux fixes
